# coinbase-perps-lab

./: .env.example  .gitignore  AGENTS.md  Cargo.toml  README.md  discover_perp_positions.py  requirements.txt
src/: lib.rs
