[package]
name = "coinbase-perps-lab"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "discover_perp_positions_rust"
path = "src/bin/discover_perp_positions_rust.rs"

[dependencies]
anyhow = "1"
base64 = "0.22"
clap = { version = "4.5", features = ["derive"] }
dotenvy = "0.15"
hex = "0.4"
p256 = { version = "0.13", features = ["ecdsa", "pem"] }
rand = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
sec1 = { version = "0.7", features = ["pem"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
